# arithmetic-encoding-lib

./: .clang-tidy  CMakeLists.txt  README.md
.ci/: build-project-valgrind.sh  build-project.sh  run-valgrind.sh
.github/workflows/: build-main.yml  dev-build.yml
benchmark/: CMakeLists.txt  README.md  adaptive_a_coder.cpp  adaptive_coder.cpp  adaptive_coders.cpp  adaptive_decoders.cpp  benchmark_analysis.ipynb  plot_benchmark.py  run_coder_benchmark.py
benchmark/lib/include/: two_parts_source.hpp  two_parts_source_with_conditions.hpp
benchmark/lib/include/impl/: source_entropy_base.hpp  source_iterator.hpp  two_parts_source_conditional_entropy_base.hpp  two_parts_source_entropy_base.hpp
benchmark/lib/src/: source_entropy_base.cpp  two_parts_source.cpp  two_parts_source_conditional_entropy_base.cpp  two_parts_source_entropy_base.cpp  two_parts_source_with_conditions.cpp
benchmark/test/: CMakeLists.txt  two_parts_source.cpp  two_parts_source_with_conditions.cpp
include/ael/: arithmetic_coder.hpp  arithmetic_decoder.hpp  bits_iterator.hpp  byte_data_constructor.hpp  bytes_iterator.hpp  data_parser.hpp  numerical_coder.hpp  numerical_decoder.hpp
include/ael/dictionary/: adaptive_a_contextual_dictionary.hpp  adaptive_a_contextual_dictionary_improved.hpp  adaptive_a_dictionary.hpp  adaptive_d_contextual_dictionary.hpp  adaptive_d_contextual_dictionary_improved.hpp  adaptive_d_dictionary.hpp  adaptive_dictionary.hpp  decreasing_counts_dictionary.hpp  decreasing_on_update_dictionary.hpp  ppma_dictionary.hpp  ppmd_dictionary.hpp  static_dictionary.hpp  uniform_dictionary.hpp
include/ael/dictionary/impl/: a_d_dictionary_base.hpp  adaptive_dictionary_base.hpp  contectual_dictionary_base_improved.hpp  contextual_dictionary_base.hpp  contextual_dictionary_stats_base.hpp  cumulative_count.hpp  cumulative_unique_count.hpp  word_probability_stats.hpp
include/ael/esc/: arithmetic_coder.hpp  arithmetic_decoder.hpp
include/ael/esc/dictionary/: adaptive_a_dictionary.hpp  adaptive_d_dictionary.hpp  ppma_dictionary.hpp  ppmd_dictionary.hpp
include/ael/impl/: byte_rng_to_bits.hpp  context_buffer.hpp  multiply_and_divide.hpp  range_and_value_save_base.hpp  range_save_base.hpp  ranges_calc.hpp  span_equality.hpp
include/ael/impl/dictionary/: a_d_dictionary_base.hpp  adaptive_dictionary_base.hpp  contectual_dictionary_base_improved.hpp  contextual_dictionary_base.hpp  contextual_dictionary_stats_base.hpp  ctx_base.hpp  cumulative_count.hpp  cumulative_unique_count.hpp  max_ord_base.hpp  ppm_a_d_dictionary_base.hpp  word_probability_stats.hpp
include/ael/impl/esc/dictionary/: a_d_dictionary_base.hpp  ppm_a_d_dictionary_base.hpp
src/: a_d_dictionary_base.cpp  adaptive_a_dictionary.cpp  adaptive_d_dictionary.cpp  adaptive_dictionary.cpp  adaptive_dictionary_base.cpp  arithmetic_coder.cpp  arithmetic_decoder.cpp  bits_iterator.cpp  byte_data_constructor.cpp  bytes_iterator.cpp  context_buffer.cpp  contextual_dictionary_base.cpp  contextual_dictionary_base_improved.cpp  contextual_dictionary_stats_base.cpp  ctx_base.cpp  cumulative_count.cpp  cumulative_unique_count.cpp  data_parser.cpp  decreasing_on_update_dictionary.cpp  esc_a_d_dictionary_base.cpp  esc_adaptive_a_dictionary.cpp  esc_adaptive_d_dictionary.cpp  esc_arithmetic_coder.cpp  esc_ppm_a_d_dictionary_base.cpp  esc_ppma_dictionary.cpp  esc_ppmd_dictionary.cpp  integer_random_access_iterator.hpp  max_ord_base.cpp  multiply_and_divide.cpp  numerical_coder.cpp  numerical_decoder.cpp  ppm_a_d_dictionary_base.cpp  ppma_dictionary.cpp  ppmd_dictionary.cpp  ranges_calc.cpp  static_dictionary.cpp  uniform_dictionary.cpp  word_probability_stats.cpp
src/esc/: adaptive_a_dictionary.cpp  adaptive_d_dictionary.cpp
test/: CMakeLists.txt  adaptive_a_contextual_dictionary.cpp  adaptive_a_contextual_dictionary_improved.cpp  adaptive_a_dictionary.cpp  adaptive_d_contextual_dictionary.cpp  adaptive_d_contextual_dictionary_improved.cpp  adaptive_d_dictionary.cpp  adaptive_dictionary.cpp  adaptive_encode_decode.cpp  arithmetic_a_encode_decode.cpp  arithmetic_d_encode_decode.cpp  bits_iterator.cpp  byte_data_constructor.cpp  bytes_iterator.cpp  context_buffer.cpp  data_parser.cpp  decreasing_on_update_dictionary.cpp  numerical_coder.cpp  numerical_decoder.cpp  ppma_dictionary.cpp  ppmd_dictionary.cpp  static_dictionary.cpp  uniform_dictionary.cpp
test/encode_decode/: adaptive.cpp  adaptive_a.cpp  adaptive_a_contextual.cpp  adaptive_a_contextual_improved.cpp  adaptive_a_d_contextual_test_template.hpp  adaptive_a_d_test_template.hpp  adaptive_a_d_test_template.txt  adaptive_d.cpp  adaptive_d_contextual.cpp  encode_decode_test_params.hpp  numerical.cpp  ppm_a_d_test_templte.hpp  ppm_a_d_test_templte.txt  ppma.cpp  ppmd.cpp
test/encode_decode/esc/: adaptive_a.cpp  adaptive_a_d.cpp  adaptive_a_d_test_template.hpp  adaptive_d.cpp  ppm_a_d.cpp  ppm_a_d_test_template.hpp  ppma.cpp  ppmd.cpp
test/encode_decode/no_esc/: adaptive.cpp  adaptive_a.cpp  adaptive_a_d.cpp  adaptive_a_d_contextual.cpp  adaptive_a_d_contextual_test_template.hpp  adaptive_a_d_test_template.hpp  adaptive_d.cpp  adaptive_d_contextual_improved.cpp  ppm_a_d.cpp  ppm_a_d_test_templte.hpp  ppmd.cpp  static.cpp  uniform.cpp
test/esc/: adaptive_a_dictionary.cpp  adaptive_d_dictionary.cpp  ppma_dictionary.cpp  ppmd_dictionary.cpp
test/lib/: encode_decode_test.hpp  ord_generator.hpp
test/no_esc/: adaptive_a_contextual_dictionary_improved.cpp  adaptive_a_dictionary.cpp  adaptive_d_dictionary.cpp  adaptive_dictionary.cpp  decreasing_counts_dictionary.cpp  ppma_dictionary.cpp  ppmd_dictionary.cpp  static_dictionary.cpp  uniform_dictionary.cpp
